<resources>
    <string name="app_name">Client</string>

    <string name="tv_menu_profile">Profile</string>
    <string name="tv_menu_attendance">Attendance</string>
    <string name="tv_menu_notification">Notification</string>
    <string name="tv_menu_map">Map</string>

    <string name="appBar_title_profile">Profile</string>
    <string name="appBar_title_suggestions">Suggestions</string>
    <string name="appBar_title_attendance">Attendance</string>
    <string name="appBar_title_history">History</string>

    <string name="profile_archive">History</string>
    <string name="profile_contact">Contact us</string>
    <string name="profile_aboutus">About us</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_logout">Logout</string>

    <string name="tv_title_contact_us">Contact us</string>
    <string name="et_hint_subject">Subject</string>

    <string name="tv_beneficiaries">Beneficiaries</string>

    <string name="appbar_title_edit_profile">Edit Profile</string>
    <string name="edit_photo">Edit Photo</string>

    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_gender">Gender</string>
    <string name="edit_profile_address">Address</string>
    <string name="edit_profile_disability">Disability Type</string>
    <string name="edit_profile_age">Age</string>
    <string name="edit_profile_city">City</string>
    <string name="edit_profile_Beneficiary">Organization</string>

    <string name="title_attendance">Confirm your attendance</string>

    <string name="ok">Ok</string>
    <string name="determine_the_accuracy_of_your_location">Determine the accuracy of your location</string>
    <string name="onboarding_image" />


    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="tv_sch_f_schedule">Schedule</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="secret_code">Enter the code that was sent to</string>

    <string name="profile_notif">Notification</string>

    <string name="vehicle_id">Vehicle ID</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="day_off">Day Off</string>

    <string name="tv_attended">Attended</string>
    <string name="tv_absent">Absent</string>

    <string name="btn_daily">Daily</string>
    <string name="btn_all">All</string>
    <string name="tv_itinerary">Itinerary </string>
    <string name="btn_start">Start </string>
    <string name="tab_saturday">Saturday </string>
    <string name="tab_sunday">Sunday </string>
    <string name="tab_monday">Monday </string>
    <string name="tab_tuesday">Tuesday </string>
    <string name="tab_wednesday">Wednesday </string>
    <string name="tab_thursday">Thursday </string>
    <string name="tv_settings">Settings </string>
    <string name="tv_sound">Sound </string>
    <string name="tv_language">Language </string>
    <string name="btn_english">English</string>
    <string name="btn_arabic">Arabic</string>
    <string name="tv_fontSize">Font size</string>
    <string name="btn_save">Save</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? <b><u>Resend</u></b></string>
    <string name="send">Send</string>
    <string name="palestine_code">+970</string>
    <string name="sending">Sending...</string>
    <string name="verify">Verify</string>
    <string name="verifying">Verifying...</string>
    <string name="google_maps_key">AIzaSyC5Zj3Id3i6fzJYpYbLPEfd0LjkboWzX-M</string>

    <string name="tv_aboutus">About us</string>
    <string name="tv_content">Running since 2012, this project focuses on addressing the specific transport
        needs of people with face disabilities, and has shown itself as vital to the lives of many residents
        of the Gaza Strip. The service provided increases the accessibility of education and rehabilitation
        services across the Gaza Strip, and people have come to rely upon the services provided. The project
        directly helps around 230 people, including university students and employees who are unable to transport
        themselves to and from their commitments.</string>
    <string name="btn_email">Email</string>
    <string name="btn_phone">Phone</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="attendance_must_be_confirmed_first">Attendance must be confirmed first!</string>
    <string name="go">Go</string>

    <string name="history_status">Attended</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to log out</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>

    //content description profile
    <string name="profile_mobile">Your phone number</string>
    <string name="profile_name">Your phone number</string>
    <string name="profile_gender">Your gender</string>
    <string name="profile_age">Your age</string>
    <string name="profile_city">Your city</string>
    <string name="profile_address">Your address</string>
    <string name="profile_organization">the organization you go to</string>
    <string name="profile_diabilitytype">Your disability type</string>
    <string name="profile_edit_btn"> Edit Profile</string>
    <string name="profile_profile_photo">Profile Picture</string>
    <string name="profile_edit_profile_photo">Edit your profile picture</string>
    <string name="must_take_location">You must accept take location permission first!</string>


</resources>