<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="@dimen/_200sdp"
    android:layout_gravity="center"
    android:elevation="@dimen/_5sdp"
    android:padding="@dimen/_10sdp"
    android:id="@+id/custom_dialog_logout"
    app:backgroundTint="@drawable/shape_code_bg"
    app:background="@drawable/shape_code_bg">


    <ImageView
        android:id="@+id/img_location"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/img_logout_dialog" />


    <TextView
        android:id="@+id/tv_description"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/are_you_sure_you_want_to_log_out"
        android:textColor="@color/sea_green"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="@+id/img_location"
        app:layout_constraintStart_toStartOf="@+id/img_location"
        app:layout_constraintTop_toBottomOf="@+id/img_location" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_5sdp"
            android:backgroundTint="@color/sea_green"
            android:text="@string/yes"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/cancel"
            android:textColor="@color/sea_green"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>