<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sea_green"
    tools:context=".Ui.Activities.settings.SettingsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"

        >

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:backgroundTint="@color/sea_green"
            android:layout_height="@dimen/_120sdp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <TextView
                    android:id="@+id/tv_settings2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_22sdp"
                    android:text="@string/tv_settings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_90sdp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:background="@drawable/shape_edged_rec"
        >

        <TextView
            android:id="@+id/tv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/tv_settings"
            android:textSize="@dimen/_20ssp"
            android:textColor="@color/black_t_sch"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_20sdp"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >


                <LinearLayout
                    android:id="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:background="@drawable/radio_normal"
                    android:orientation="horizontal"
                    android:paddingVertical="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/ll2"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:src="@drawable/img_sound" />

                    <TextView
                        android:id="@+id/tv_sound"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:text="@string/tv_sound"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_14ssp" />

                    <Switch
                        android:id="@+id/sw_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_11sdp"
                        android:layout_gravity="end"
                        android:checked="true"

                        />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:background="@drawable/radio_normal"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll1">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/img_world" />

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_9sdp"
                        android:text="@string/tv_language"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_14ssp" />

                    <RadioGroup
                        android:id="@+id/rg_buttons_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_15sdp"
                        >

                        <RadioButton
                            android:id="@+id/rbtn_english"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_english"
                            android:textSize="@dimen/_14ssp"
                            android:paddingVertical="@dimen/_11sdp"
                            android:paddingHorizontal="@dimen/_34sdp"
                            android:button="@android:color/transparent"
                            android:background="@drawable/radio_selector"
                            android:textColor="@drawable/text_color_language"
                            android:layout_marginEnd="@dimen/_5sdp"
                            />
                        <RadioButton
                            android:id="@+id/rbtn_arabic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/btn_arabic"
                            android:textSize="@dimen/_14ssp"
                            android:paddingVertical="@dimen/_11sdp"
                            android:paddingHorizontal="@dimen/_34sdp"
                            android:button="@android:color/transparent"
                            android:background="@drawable/radio_selector"
                            android:textColor="@drawable/text_color_language"
                            android:layout_marginStart="@dimen/_5sdp"
                            />

                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginVertical="@dimen/_20sdp"
                    android:background="@drawable/radio_normal"
                    android:orientation="vertical"
                    android:paddingVertical="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll2">

                    <ImageView
                        android:layout_width="@dimen/_24sdp"
                        android:layout_height="@dimen/_24sdp"
                        android:layout_gravity="center"
                        android:src="@drawable/img_text" />

                    <TextView
                        android:id="@+id/tv_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:text="@string/tv_fontSize"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_14ssp" />

                    <SeekBar
                        android:id="@+id/sb_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:layout_marginHorizontal="@dimen/_40sdp"
                        android:max="6"
                        android:progress="10"
                        />
                    <TextView
                        android:id="@+id/tv_fontSize"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_5sdp"
                        android:text="10%"
                        android:textColor="@color/dark_gray"
                        android:textSize="@dimen/_14ssp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/ll3"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_40sdp"
                    android:text="@string/btn_save"
                    android:textSize="@dimen/_14ssp"
                    android:textStyle="bold"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:padding="@dimen/_10sdp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>






        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>










    <!--    android:layout_height="@dimen/_118sdp"-->
